--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,8 @@
   "description": "Backend for Smart Travel Itinerary Planner",
   "main": "dist/server.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --loader ts-node/esm src/server.ts",
+    "dev": "nodemon src/server.ts"
   },
   "keywords": [
     "travel",
