--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,10 @@
   "description": "Backend for Smart Travel Itinerary Planner",
   "main": "dist/server.js",
   "scripts": {
-    "start": "node --loader ts-node/esm src/server.ts",
-    "dev": "nodemon src/server.ts"
-  },
+  "build": "tsc",
+  "start": "node dist/server.js"
+}
+
   "keywords": [
     "travel",
     "itinerary",
